/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto2";
package com.dremio.proto.model.attempts;

option java_package = "com.dremio.proto.model.attempts";
option optimize_for = SPEED;

option java_outer_classname = "Attempts";

enum AttemptReason {
  NONE = 1;
  OUT_OF_MEMORY = 2;
  SCHEMA_CHANGE = 3;
  INVALID_DATASET_METADATA = 4;
  JSON_FIELD_CHANGE = 5;
  RESOURCE_TIMEOUT = 6;
}

enum RequestType {
  GET_CATALOGS = 1;
  GET_COLUMNS = 2;
  GET_SCHEMAS = 3;
  GET_TABLES = 4;
  CREATE_PREPARE = 5;
  EXECUTE_PREPARE = 6;
  RUN_SQL = 7;
  GET_SERVER_META = 8;
}
